# mankind_DE

./: Sales_Trend_Analysis.pbix  requirements.txt
Data_cleaning/: .gitattributes  .gitignore  README_Windows_Spark_Hadoop.md  pyproject.toml  requirements.txt
Data_cleaning/MKM_Data_Profiling/profilers/: _base_profile.py  address_profile.py  all_common_profilers.py  category_profile.py  order_items_profile.py  order_status_history_profile.py  orders_profile.py  payments_profile.py  products_profile.py  profiling_config.yaml  run_all_profiles.py  users_profile.py
Data_cleaning/MKM_Data_Validation_and_cleaning/cleaners/: README_Cleaning_Running.md  clean_all.py  clean_cart_item.py  clean_order_items.py  clean_order_payments.py  clean_order_status_history.py  clean_orders.py  clean_payment.py  clean_products.py  clean_users.py  clean_wishlist.py  run_cleaning_common.py
Data_cleaning/MKM_Data_Validation_and_cleaning/controller/: run_cleaning_pipeline.py  run_post_validations.py  run_pre_validations.py
Data_cleaning/dev_support/diagnostics/: Print_the_structure_of_root_folder.py  check_sales_outputs.py  spark_boot_test.py
Data_cleaning/misc/: build_sales_gold.py  build_semantic.py  payments_by_order_semantic.py  promote_mismatches_to_lineage.py  transform_dim_products.py  transform_dim_users.py  transform_fact_order_items.py  transform_fact_orders.py  transforms_common.py
Data_cleaning/src/connections/: db_connections.py
Data_cleaning/src/transformations/: __init__.py  base.py  ecommerce.py  sales.py
Data_cleaning/src/utils/: alert_utils.py  lineage.py  (+2 more)
(+169 files in other folders)
